--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,8 @@
 platform = atmelsam
 board = mkrwifi1010
 framework = arduino
+lib_deps = 
+	arduino-libraries/WiFiNINA@^1.8.14
+	winlinvip/SimpleDHT@^1.0.15
+	arduino-libraries/RTCZero@^1.6.0
+	knolleary/PubSubClient@^2.8
