--- a/platformio.ini
+++ b/platformio.ini
@@ -13,5 +13,10 @@ platform = atmelsam
 board = mkrwifi1010
 framework = arduino
 lib_deps = 
-	arduino-libraries/WiFiNINA@^1.8.14
-	SPI
+	arduino-libraries/WiFiNINA @ ^1.8.12
+	knolleary/PubSubClient @ ^2.8
+	bblanchon/ArduinoJson @ ^6.18.2
+	arduino-libraries/ArduinoBearSSL@^1.7.2
+	arduino-libraries/ArduinoECCX08@^1.3.5
+	arduino-libraries/ArduinoMqttClient@^0.1.5
+	arduino-libraries/Arduino_BQ24195@^0.9.1
